syntax = "proto3";

option csharp_namespace = "BowlingGrpcClient";

package bowling;

service StatisticGRPCService {
  rpc GetAll (GetAllRequest) returns (GetAllReply);
  rpc GetById (GetByIdRequest) returns (GetByIdReply);
  rpc AddStatistic (AddStatisticRequest) returns (AddStatisticReply);
  rpc EditStatistic (EditStatisticRequest) returns (EditStatisticReply);
  rpc DeleteStatistic (DeleteStatisticRequest) returns (DeleteStatisticReply);
}

message GetAllRequest {
	int32 page = 1;
	int32 nbStat = 2;
}

message GetAllReply {
	repeated StatisticGRPC statisticGRPC = 1;
}

message GetByIdRequest {
	int32 id = 1;
}

message GetByIdReply {
	StatisticGRPC statisticGRPC = 1;
}

message AddStatisticRequest {
	int32 id = 1;
	int32 numberOfVictory = 2;
	int32 numberOfDefeat = 3;
	int32 numberOfGames = 4;
	int32 bestScore = 5;
}

message AddStatisticReply {
	string response = 1;
}

message EditStatisticRequest {
	int32 id = 1;
	int32 numberOfVictory = 2;
	int32 numberOfDefeat = 3;
	int32 numberOfGames = 4;
	int32 bestScore = 5;
}

message EditStatisticReply {
	string response = 1;
}

message DeleteStatisticRequest {
	int32 id = 1;
}

message DeleteStatisticReply {
	string response  = 1;
}

message StatisticGRPC {
	int32 id = 1;
	int32 numberOfVictory = 2;
	int32 numberOfDefeat = 3;
	int32 numberOfGames = 4;
	int32 bestScore = 5;
}